<resources>
    <string name="app_name">MyProject</string>
    <string name="start_create_post">Create Post</string>
    <string name="start_posts">Posts</string>
    <string name="start_read_post">Read Post</string>
    <string name="start_settings">Settings</string>
    <string name="login">Login</string>
    <string name="posts">Posts</string>
    <string name="create_post">Create Post</string>
    <string name="read_post">Read Post</string>
    <string name="settings">Settings</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="create_post_hint">Post something</string>
    <string name="confirm_post_txt">Post</string>
    <string name="cancel_post_txt">Cancel</string>
    <string name="tags_hint">Add tags</string>
    <string name="pref_posts">Posts Preferences</string>
    <string name="pref_comments">Comments Preferences</string>
    <string name="pref_posts_sorting">Sorting</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="my_app">My App</string>
    <string name="pref_sorting_default">date_desc</string>
    <string name="dislike">Dislike</string>
    <string name="like">Like</string>
    <string name="title_activity_tab_test">TabTest</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_read_post2">ReadPostActivity2</string>
    <string name="title_activity_users">UsersActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="register_link"><u>Register</u></string>

</resources>
